# django-outbox

./: .gitignore  CHANGELOG.rst  Pipfile  README.rst  pyproject.toml  requirements.txt  setup.py
django_outbox/: urls.py  views.py
django_outbox/templates/django_outbox/: base.html
tests/: conftest.py  settings.py  urls.py
tests/tests/: test_views.py
